tests/neg/i9472b.check
-- [E161] Naming Error: tests/neg/i9472b/A.scala:3:0 -------------------------------------------------------------------
3 |object Reproduction // error
  |^
  |Reproduction clashes with class Reproduction in tests/neg/i9472b/B.scala; the two must be defined together
